--- a/Frontend/public/index.html
+++ b/Frontend/public/index.html
@@ -9,6 +9,7 @@
       name="description"
       content="Web site created using create-react-app"
     />
+    <link rel="stylesheet" href="/style.css" />
     <meta name="viewport" content="width=device-width, user-scalable=no" />
     <link rel="apple-touch-icon" href="/build/favicon.ico" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
