--- a/Frontend/public/index.html
+++ b/Frontend/public/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="Web site created using create-react-app" />
+    <meta name="facebook-domain-verification" content="xp1gv0mdu60wfkxloo89mkb4kkht97" />
     <link rel="stylesheet" href="/style.css" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon.ico" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
